--- a/SSMM/.settings/org.eclipse.wst.common.component
+++ b/SSMM/.settings/org.eclipse.wst.common.component
@@ -4,7 +4,8 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/m2e-wtp/web-resources"/>
         <property name="java-output-path" value="/SSMM/target/classes"/>
         <property name="context-root" value="SSMM_0.0.1-SNAPSHOT_20170830080255"/>
     </wb-module>
